--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 
 :root {
-  --bg: #5f4b8b;
-  --fg: #ffffff;
+  --bg: #4f335e;
+  --fg: #f8f8f2;
   --secondaryFg: #b3b3b3;
   --containerBg: #272727;
   --searchBg: var(--containerBg);
-  --scrollbarColor: #3f3f3f;
-  --fontFamily: 'Roboto Mono', monospace;
+  --scrollbarColor: ##282a36;
+  --fontFamily: 'Courier New', monospace;
 }
 
 body {
